better integration of analytics and js files

--- a/themes/trackfellas/_config.yml
+++ b/themes/trackfellas/_config.yml
@@ -14,7 +14,7 @@ fancybox: false
 # Sidebar
 
 # Miscellaneous
-google_analytics:
+google_analytics: true
 favicon: /favicon.png
 twitter:
 google_plus:
