Install hexo-cli

--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 dependencies:
   override:
-    - npm install -g hexo
+    - npm install hexo-cli -g
     - npm install
   cache_directories:
     - node_modules
