--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,8 @@
 dependencies:
   pre:
-    - npm install hexo-cli -g
+    - npm install hexo-cli mocha -g
     - npm install
   override:
-    - npm help
+    - mocha
   cache_directories:
     - node_modules
