changing config, adding build dependencies, removing theme readme

--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 # Site
 title: Trackfellas
-subtitle: the revolutionary platform for travel routes
+subtitle: your community for travel routes
 description: Trackfellas is a revolutionary platform to discover, plan, book, document, rate and share travel routes.
 author: trackfellas team
-email:
+email: info@trackfellas.com
 language: EN
 
 # URL
