--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
-    "name": "hexo-site",
-    "version": "0.0.0",
-    "private": true,
-    "hexo": {
-        "version": "3.1.1"
-    },
-    "dependencies": {
-        "hexo": "^3.0.0",
-        "hexo-clean-css": "0.0.2",
-        "hexo-generator-archive": "^0.1.0",
-        "hexo-generator-category": "^0.1.0",
-        "hexo-generator-index": "^0.1.0",
-        "hexo-generator-sitemap": "^1.0.1",
-        "hexo-generator-tag": "^0.1.0",
-        "hexo-renderer-ejs": "^0.1.0",
-        "hexo-renderer-marked": "^0.2.4",
-        "hexo-renderer-stylus": "^0.2.0",
-        "hexo-server": "^0.1.2"
-    }
+  "name": "Trackfellas Homepage",
+  "description": "Trackfellas dependencies",
+  "version": "1.0.0",
+  "private": true,
+  "license": "proprietary",
+  "author": "Trackfellas",
+  "hexo": {
+    "version": "3.1.1"
+  },
+  "dependencies": {
+    "hexo": "^3.0.0",
+    "hexo-clean-css": "0.0.2",
+    "hexo-generator-archive": "^0.1.0",
+    "hexo-generator-category": "^0.1.0",
+    "hexo-generator-index": "^0.1.0",
+    "hexo-generator-sitemap": "^1.0.1",
+    "hexo-generator-tag": "^0.1.0",
+    "hexo-renderer-ejs": "^0.1.0",
+    "hexo-renderer-marked": "^0.2.4",
+    "hexo-renderer-markdown-it": "^2.1.3",
+    "hexo-renderer-stylus": "^0.2.0",
+    "hexo-server": "^0.1.2",
+    "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
+    "gulp-jsx": "^2.0.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sass": "^2.0.1",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.5"
+  }
 }
