--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Trackfellas
+title: Trackfellas | A community for travel routes
 subtitle: your community for travel routes
 description: Trackfellas is a revolutionary platform to discover, plan, book, document, rate and share travel routes.
 author: trackfellas team
@@ -65,7 +65,7 @@ time_format: H:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 0
 pagination_dir: page
 
 # Disqus
