--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Trackfellas Homepage",
+  "name": "trackfellas-homepage",
   "description": "Trackfellas dependencies",
   "version": "1.0.0",
   "private": true,
@@ -23,10 +23,9 @@
     "hexo-server": "^0.1.2",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
-    "gulp-jsx": "^2.0.0",
-    "gulp-plumber": "^1.0.1",
+    "gulp-watch": "^4.2.4",
     "gulp-sass": "^2.0.1",
-    "gulp-sourcemaps": "^1.5.2",
+    "gulp-minify-css": "^1.1.6",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.5"
   }
