adding bower and gulp to circle configuration

--- a/circle.yml
+++ b/circle.yml
@@ -1,11 +1,14 @@
 dependencies:
   pre:
-    - npm install hexo-cli mocha -g
+    - npm install hexo-cli mocha bower gulp -g
     - npm install
+    - bower install
   cache_directories:
     - node_modules
+    - themes/trackfellas/bower_components
 
 test:
   override:
+    - gulp
     - mocha
     - hexo generate
