--- a/circle.yml
+++ b/circle.yml
@@ -2,13 +2,13 @@ dependencies:
   pre:
     - npm install hexo-cli mocha bower gulp -g
     - npm install
-    - bower install
+    - bower update
+    - gulp
   cache_directories:
     - node_modules
     - themes/trackfellas/bower_components
 
 test:
   override:
-    - gulp
     - mocha
     - hexo generate
