bower dependency added, updated gulp file with new dependency and watch task for js remove tag from post scaffold rearrange footer urls for icons rearrange header for new category, adjust urls

--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "foundation-libsass-template",
   "dependencies": {
     "foundation": "zurb/bower-foundation",
-    "slick.js": "~1.5.5"
+    "slick.js": "~1.5.5",
+    "fontawesome": "4.3.0"
   }
 }
