--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "foundation": "zurb/bower-foundation",
     "slick.js": "~1.5.5",
-    "fontawesome": "4.3.0"
+    "fontawesome": "4.3.0",
+    "featherlight": "~1.3.2"
   }
 }
