--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,8 @@
     "foundation": "zurb/bower-foundation",
     "slick.js": "~1.5.5",
     "fontawesome": "4.3.0",
-    "featherlight": "~1.3.2"
+    "featherlight": "~1.3.2",
+    "formchimp": "~1.0.4",
+    "jquery-smooth-scroll": "~1.5.5"
   }
 }
