fix html errors, change description in config

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Trackfellas | Find travel routes
 subtitle: your community for travel routes
-description: Trackfellas is a revolutionary platform to discover, plan, book, document, rate and share travel routes.
+description: Trackfellas is your community and marketplace to discover, plan, book, document, rate and share travel routes.
 author: trackfellas team
 email: info@trackfellas.com
 language: EN
