--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: your community for travel routes
 description: Trackfellas is your community and marketplace to discover, plan, book, document, rate and share travel routes.
 author: trackfellas team
 email: info@trackfellas.com
-language: EN
+language: en
 
 
 # URL
@@ -70,7 +70,7 @@ per_page: 0
 pagination_dir: page
 
 # Disqus
-disqus_shortname:
+disqus_shortname: trackfellas
 
 # Extensions
 ## Plugins: https://github.com/hexojs/hexo/wiki/Plugins
@@ -78,11 +78,6 @@ disqus_shortname:
 theme: trackfellas
 exclude_generator:
 
-# Deployment
-## Docs: http://hexo.io/docs/deployment.html
-deploy:
-  type: github
-  repo:
 # Sitemap
 sitemap:
   path: sitemap.xml
