change scaffolds to include description and cover; remove large pictures, add Facebook preview, path of fonts; adjusted open graph for cover picture and meta description fixes

--- a/themes/trackfellas/_config.yml
+++ b/themes/trackfellas/_config.yml
@@ -15,7 +15,7 @@ fancybox: false
 
 # Miscellaneous
 google_analytics: true
-favicon: /favicon.png
+favicon: /favicon.ico
 twitter: trackfellas
 google_plus: https://plus.google.com/+Trackfellas
 fb_admins:
