fix: remove fb id, change path for fb preview

--- a/themes/trackfellas/_config.yml
+++ b/themes/trackfellas/_config.yml
@@ -19,4 +19,4 @@ favicon: /favicon.ico
 twitter: trackfellas
 google_plus: https://plus.google.com/+Trackfellas
 fb_admins:
-fb_app_id: 1579754445592640
+fb_app_id:
