update nav update gallery (mobile first, arrows...) update map index correct distances new footer slight change in google analytics adding font awesome bigger hero image for start page

--- a/themes/trackfellas/_config.yml
+++ b/themes/trackfellas/_config.yml
@@ -3,7 +3,7 @@ menu:
   About: /#about
   Routes: /routes.html
   Team: /#team
-  Blog: //blog.trackfellas.com
+  Blog: /#blog
   Sign up: /#signup
   Get in touch: /#contact
 rss: /atom.xml
