--- a/package.json
+++ b/package.json
@@ -9,20 +9,18 @@
     "version": "3.1.1"
   },
   "dependencies": {
+    "fs": "0.0.2",
     "hexo": "^3.1.1",
+    "hexo-deployer-git": "0.0.4",
     "hexo-generator-category": "^0.1.0",
     "hexo-generator-index": "^0.1.0",
     "hexo-generator-sitemap": "^1.0.1",
     "hexo-renderer-ejs": "^0.1.0",
     "hexo-renderer-markdown-it": "^2.1.3",
-    "hexo-renderer-stylus": "^0.2.0",
+    "hexo-renderer-sass": "^0.1.2",
     "hexo-server": "^0.1.2",
-    "gulp": "^3.8.11",
-    "gulp-concat": "^2.5.2",
-    "gulp-watch": "^4.2.4",
-    "gulp-sass": "^2.0.1",
-    "gulp-minify-css": "^1.1.6",
-    "gulp-uglify": "^1.2.0",
-    "gulp-util": "^3.0.5"
+    "node-sass": "^3.2.0",
+    "shelljs": "^0.5.1",
+    "uglifyjs": "^2.4.10"
   }
 }
