--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "hexo-renderer-markdown-it": "^2.1.3",
     "hexo-renderer-sass": "^0.1.2",
     "hexo-server": "^0.1.2",
+    "hexo-uglify": "0.0.3",
     "node-sass": "^3.2.0",
     "shelljs": "^0.5.1",
-    "uglifyjs": "^2.4.10"
+    "uglify-js": "^2.4.23"
   }
 }
