--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
   "name": "foundation-libsass-template",
   "dependencies": {
-    "foundation": "zurb/bower-foundation",
-    "slick.js": "~1.5.5",
+    "featherlight": "^1.3.2",
     "fontawesome": "4.3.0",
-    "featherlight": "~1.3.2",
-    "formchimp": "~1.0.4",
-    "jquery-smooth-scroll": "~1.5.5"
+    "formchimp": "^1.0.4",
+    "foundation": "zurb/bower-foundation",
+    "jquery-smooth-scroll": "^1.5.5",
+    "slick.js": "^1.5.5"
   }
 }
