Deploy with circleCI after a successful master build (try first with dev)

--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ test:
     - hexo generate --debug
 deployment:
   master:
-    branch: master
+    branch: develop
     owner: trackfellas
     commands:
       - hexo deploy
