Fix circleci branch in deployment

--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ test:
     - mocha
     - hexo generate --debug
 deployment:
-  master:
+  develop:
     branch: master
     owner: trackfellas
     commands:
