Second fix - my bad !!

--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ test:
     - hexo generate --debug
 deployment:
   develop:
-    branch: master
+    branch: develop
     owner: trackfellas
     commands:
       - hexo deploy
