fix js: version 1.5.6 of slick introduced a bug (length > 0 was missing the >0 ). i changed the dependencies to 1.5.5 and used the uglify hexo plugin

--- a/themes/trackfellas/_config.yml
+++ b/themes/trackfellas/_config.yml
@@ -17,7 +17,11 @@ node_sass:
   outputStyle: compressed
   precision: 5
   sourceComments: false
-
+# Uglify
+uglify:
+  mangle: true
+  output:
+  compress:
 # Miscellaneous
 google_analytics: true
 favicon: /favicon.ico
