--- a/source/_data/cuba.yml
+++ b/source/_data/cuba.yml
@@ -1,14 +1,20 @@
 # Route Data needed
 # General:
 General:
-  shortURL:
+  title: Cuba Southeast City Tour
+  identifier: cubaroute
+  shortURL: http://tfl.la/cubaroute
+  routeDescription: 'Our next trip brings us to the fast changing socialistic island Cuba! Guiding you on your way from old colonial Havana towards the southeast to Santiago de Cuba.'
+  socialCover: '/img/cuba/cuba_fb.jpg'
 
 # Specify Traveler
 Traveler:
-  picture: '/img/Nika.jpg'
+  picture: '/img/nika.jpg'
   name: 'Nika'
   age: 25-35
-  location: Hamburg, Germany
+  location:
+    city: Hamburg
+    country: Germany
   skills: Globetrotter
   noRoutes: 1
   contactEmail: nika@trackfellas.com
@@ -22,10 +28,10 @@ KeyFacts:
   type: Individual Trip
   date: 03.04.2015 - 21.04.2015
   duration: 18
-  weather: 20 - 30°C, dry and sunny weather
+  weather: '20 - 30°C, dry and sunny weather'
   activities: Nightlife, Eating, Relaxing, Sightseeing, Culture
   terrain: Island, Beach, Nature, Mountains, Urban
-  safety: Cuba is a quite safe country for travelers, however keep an eye on our belongings
+  safety: 'Cuba is quite a safe country for travelers, however keep an eye on our belongings'
   noTravelers: 2 (Friends)
   skills: Easy
   travelType: family; single woman; older traveler
@@ -40,14 +46,14 @@ Details:
     country: Cuba
     location: Carribean
     languages: Spanish
-    climate: Steady temperatures all year round with day temperatures from 26°C in winter up to humid 32°C in summer. Hurricanes can hit Cuba from June until November, most often in September
+    climate: 'Steady temperatures all year round with day temperatures from 26°C in winter up to humid 32°C in summer. Hurricanes can hit Cuba from June until November, most often in September'
     seasons: Cuba can be visited all year. Best season is from November until May with lots of sun and temperatures around 25°C during the day and 20°C at night.
-    travelPeriod: June - October is off season and December - May is the main season, however Cuba is not overcrowded. This might change with the improvement of relations between the USA and Cuba, which could lead to a greater number of tourists from the US. Currently direct tourist travel from the USA to Cuba is not possible.
-    visa: A visa/tourist card for EU travelers is valid for 30 days and can be renewed for another 30 days. You can get it at the Cuban embassy or most airlines or travel agents also sell it to you before departure. Price is 25 CUC. EU citizens also need a passport, that is valid for at least 6 more months. For US tourists visiting Cuba is still forbidden by US law.
-    conversionCurrency: 1 CUC = 0,95 € (April 2015). The convertible peso (CUC) is the currency for tourists in Cuba and is equivalent to the US Dollar.
+    travelPeriod: 'June - October is off season and December - May is the main season, however Cuba is not overcrowded. This might change with the improvement of relations between the USA and Cuba, which could lead to a greater number of tourists from the US. Currently direct tourist travel from the USA to Cuba is not possible.'
+    visa: 'A visa/tourist card for EU travelers is valid for 30 days and can be renewed for another 30 days. You can get it at the Cuban embassy or most airlines or travel agents also sell it to you before departure. Price is 25 CUC. EU citizens also need a passport, that is valid for at least 6 more months. For US tourists visiting Cuba is still forbidden by US law.'
+    conversionCurrency: '1 CUC = 0,95 € (April 2015). The convertible peso (CUC) is the currency for tourists in Cuba and is equivalent to the US Dollar.'
     accomodation: 'Every house with a blue anchor in front can be rented by tourists. Houses with a red anchor are just for locals. Prices for accomodation can normally be negotiated in Casas Particulares.'
-    healthcare: No special vaccination necessary, apart from tetanus and diphtheria. No malaria, but dengue fever occurs. Medical care is quite good. Nevertheless there is a general lack of medication in pharmacies, so better bring your own first-aid kit.
-    travelWarning: No travel warnings. Cuban citizens need a permission to make private business. Accommodation in private households without official permission might lead to problems with the police for the host and the guest, so better check the documents in advance.
+    healthcare: 'No special vaccination necessary, apart from tetanus and diphtheria. No malaria, but dengue fever occurs. Medical care is quite good. Nevertheless there is a general lack of medication in pharmacies, so better bring your own first-aid kit.'
+    travelWarning: 'No travel warnings. Cuban citizens need a permission to make private business. Accommodation in private households without official permission might lead to problems with the police for the host and the guest, so better check the documents in advance.'
   stop:
     type:
     name:
