making social media icons ready for responsive.

--- a/themes/trackfellas/_config.yml
+++ b/themes/trackfellas/_config.yml
@@ -28,4 +28,4 @@ favicon: /favicon.ico
 twitter: trackfellas
 google_plus: https://plus.google.com/+Trackfellas
 fb_admins:
-fb_app_id:
+fb_app_id: 1001922153156464
