fix social buttons

--- a/source/_data/cuba.yml
+++ b/source/_data/cuba.yml
@@ -17,7 +17,7 @@ Traveler:
     country: Germany
   skills: Globetrotter
   noRoutes: 1
-  contactEmail: nika@trackfellas.com
+  contactEmail: 'nika@trackfellas.com'
 
 # Map
 Map:
