adding disqus comments for routes changing Nikas pic

--- a/themes/trackfellas/_config.yml
+++ b/themes/trackfellas/_config.yml
@@ -29,3 +29,4 @@ twitter: trackfellas
 google_plus: https://plus.google.com/+Trackfellas
 fb_admins:
 fb_app_id: 1001922153156464
+disqus_shortname: trackfellas
